--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <script type="application/javascript">
 var Player;
 
+var TILE_SIZE = 16;
+
 function init() {
   Scene.init();
   Player = new Actor (1,1,"black");
@@ -38,7 +40,7 @@ function updateStats (w,h,st,sh) {
 </head>
 
 <body onload="init()">
-<canvas id="canvas" style="border: 1px dotted" width="300" height="300"></canvas>
+<canvas id="canvas" style="border: 1px dotted" width="512" height="512"></canvas>
 <button onclick="drawMenu()">Menu</button>
 <div id="wealthDisplay"></div>
 <div id="healthDisplay"></div>
