Basic texture support

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ var TILE_SIZE = 16;
 
 function init() {
   Scene.init();
-  Player = new Actor (1,1,"black");
+  Player = new Actor (1,1,"black","player.bmp");
 
   var shops = new Array();
   shops.push(new Shop(3,8,"red"));
