--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <script type="application/javascript">
 var Player;
 
+var graphicsLevel = 1;
+
+var GRAPHICS_MAX = 2;
 var TILE_SIZE = 16;
 
 function init() {
@@ -36,12 +39,18 @@ function updateStats (w,h,st,sh) {
   shelf.innerHTML = "Shelf: " + sh;
 }
 
+function changeGraphics () {
+  graphicsLevel = (graphicsLevel + 1)%GRAPHICS_MAX;
+  Scene.draw();
+}
+
   </script>
 </head>
 
 <body onload="init()">
 <canvas id="canvas" style="border: 1px dotted" width="512" height="512"></canvas>
 <button onclick="drawMenu()">Menu</button>
+<button onclick="changeGraphics()">Graphics</button>
 <div id="wealthDisplay"></div>
 <div id="healthDisplay"></div>
 <div id="stealthDisplay"></div>
