--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
 </head>
 
 <body onload="init()">
-<canvas id="canvas" style="border: 1px dotted" width="512" height="512"></canvas>
+  <canvas id="canvas" style="border: 1px dotted" width="512" height="512"></canvas>
 
-<button onclick="drawMenu()">Menu</button>
-<button onclick="changeGraphics()">Graphics</button>
+  <button onclick="drawMenu()">Menu</button>
+  <button onclick="changeGraphics()">Graphics</button>
 
-<div id="wealthDisplay"></div>
-<div id="healthDisplay"></div>
-<div id="stealthDisplay"></div>
-<div id="shelfDisplay"></div>
+  <div id="wealthDisplay"></div>
+  <div id="healthDisplay"></div>
+  <div id="stealthDisplay"></div>
+  <div id="shelfDisplay"></div>
+
+  <form>
+    <input type="text" id="upKeyInput" value="e">Up</input>
+    <input type="text" id="downKeyInput" value="n">Down</input>
+    <input type="text" id="leftKeyInput" value="i">Left</input>
+    <input type="text" id="rightKeyInput" value="h">Right</input>
+  </form>
+  <button onclick="setKeys()">Update Keybindings</button>
 </body>
 
 </html>
