Added skeleton for shop item showing, cleanup up UpdateStats()

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <script src="js/functions.js"></script>
   <script src="js/scene.js"></script>
   <script src="js/actor.js"></script>
+  <script src="js/shop.js"></script>
 </head>
 
 <body onload="init()">
@@ -21,6 +22,9 @@
   <input type="text" id="leftKeyInput" value="i">Left</input>
   <input type="text" id="rightKeyInput" value="h">Right</input>
   <button onclick="setKeys()">Update Keybindings</button>
+
+  <div id="shopDisplay"></div>
+  <button onclick="displayShop()">SHOP</button>
 </body>
 
 </html>
