--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
   <canvas id="canvas" style="border: 1px dotted" width="512" height="512"></canvas>
 
   <button onclick="drawMenu()">Menu</button>
-  <button onclick="changeGraphics()">Graphics</button>
 
   <div id="wealthDisplay"></div>
   <div id="healthDisplay"></div>
   <div id="stealthDisplay"></div>
   <div id="shelfDisplay"></div>
 
-  <input type="text" id="upKeyInput" value="e">Up</input>
-  <input type="text" id="downKeyInput" value="n">Down</input>
-  <input type="text" id="leftKeyInput" value="i">Left</input>
-  <input type="text" id="rightKeyInput" value="h">Right</input>
-  <button onclick="setKeys()">Update Keybindings</button>
-
   <div id="shopDisplay"></div>
   <button onclick="displayShop()">SHOP</button>
+
+  <button onclick="toggleSettings()">Settings</button>
+  <div id="settingsPanel"></div>
 </body>
 
 </html>
