--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <button onclick="toggleSettings()">Settings</button>
 
   <div id="settings">
-    <button class="setting" onclick="changeGraphics()">Graphics</button>
-    <input class="setting" type="text" id="upKeyInput" value="w">Up</input>
-    <input class="setting" type="text" id="downKeyInput" value="a">Down</input>
-    <input class="setting" type="text" id="leftKeyInput" value="s">Left</input>
-    <input class="setting" type="text" id="rightKeyInput" value="d">Right</input>
-    <button class="setting" onclick="setKeys()">Update Keybindings</button>
+    <button class="setting" onclick="changeGraphics()">Graphics</button><br>
+    <input class="setting" type="text" id="upKeyInput" value="w">Up</input><br>
+    <input class="setting" type="text" id="downKeyInput" value="a">Down</input><br>
+    <input class="setting" type="text" id="leftKeyInput" value="s">Left</input><br>
+    <input class="setting" type="text" id="rightKeyInput" value="d">Right</input><br>
+    <button class="setting" onclick="setKeys()">Update Keybindings</button><br>
   </div>
 
 </body>
