Shop contents should now be displayed in a slightly prettier fashion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body onload="init()">
-  <canvas id="canvas" width="512" height="512"></canvas>
+  <div id="canvas-wrap">
+    <canvas id="canvas" width="512" height="512"></canvas>
+  </div>
+
 
   <button onclick="drawMenu()">Menu</button>
 
