should now only show the SHOP button when actually on a shop

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="shelfDisplay"></div>
 
   <div id="shopDisplay"></div>
-  <button onclick="displayShop()">SHOP</button>
+  <button id="shopButton" onclick="displayShop()">SHOP</button>
 
   <button onclick="toggleSettings()">Settings</button>
 
