Fixed the 'a' and 's' default directional mappings being switched

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <div id="settings">
     <button class="setting" onclick="changeGraphics()">Graphics</button><br>
     <input class="setting" type="text" id="upKeyInput" value="w">Up</input><br>
-    <input class="setting" type="text" id="downKeyInput" value="a">Down</input><br>
-    <input class="setting" type="text" id="leftKeyInput" value="s">Left</input><br>
+    <input class="setting" type="text" id="leftKeyInput" value="a">Left</input><br>
+    <input class="setting" type="text" id="downKeyInput" value="s">Down</input><br>
     <input class="setting" type="text" id="rightKeyInput" value="d">Right</input><br>
     <button class="setting" onclick="setKeys()">Update Keybindings</button><br>
   </div>
