--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
   <div id="settings">
     <button class="setting" onclick="changeGraphics()">Graphics</button><br>
-    <input class="setting" type="text" id="upKeyInput" value="w">Up</input><br>
-    <input class="setting" type="text" id="downKeyInput" value="a">Down</input><br>
-    <input class="setting" type="text" id="leftKeyInput" value="s">Left</input><br>
-    <input class="setting" type="text" id="rightKeyInput" value="d">Right</input><br>
+    <input class="setting" type="text" id="upKeyInput" value="w" maxlength="1">Up</input><br>
+    <input class="setting" type="text" id="downKeyInput" value="a" maxlength="1">Down</input><br>
+    <input class="setting" type="text" id="leftKeyInput" value="s" maxlength="1">Left</input><br>
+    <input class="setting" type="text" id="rightKeyInput" value="d" maxlength="1">Right</input><br>
     <button class="setting" onclick="setKeys()">Update Keybindings</button><br>
   </div>
 
