Asynch login now works

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body onload="init()">
+  <div id="loginBox">
+    <input type="text" id="userBox">Username</input>
+    <button id="loginButton" onclick="login()">Login</button>
+  </div>
+
   <div id="canvas-wrap">
     <canvas id="canvas" width="512" height="512"></canvas>
   </div>
