--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <input type="text" id="userBox">Username</input>
     <button id="loginButton" onclick="login()">Login</button>
   </div>
+  <div id="logoutBox">
+    <button id="logoutButton" onclick="logout()">Logout</button>
+  </div>
 
   <div id="canvas-wrap">
     <canvas id="canvas" width="512" height="512"></canvas>
