--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="loginButton" onclick="login()">Login</button>
   </div>
   <div id="logoutBox">
+    Logged in as <span id="loginName"></span>
     <button id="logoutButton" onclick="logout()">Logout</button>
   </div>
 
