--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
+  <link rel="stylesheet" href="style.css" type="text/css">
+
   <script src="js/functions.js"></script>
+  <script src="js/inventory.js"></script>
   <script src="js/scene.js"></script>
   <script src="js/actor.js"></script>
   <script src="js/shop.js"></script>
   <script src="js/notifications.js"></script>
-  <link rel="stylesheet" href="style.css" type="text/css"></link>
+
 </head>
 
 <body onload="init()">
