--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="init()">
-  <h1>Our Gamey Thing</h1>
+  <h1>Space Trading</h1>
   <div id="content">
     <div id="left">
       <div id="loginBox">
