Describe what 'Stealth' and 'Shelf' actually are

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div id="playerStats">
         <div id="wealthDisplay"></div>
         <div id="healthDisplay"></div>
-        <div id="stealthDisplay"></div>
-        <div id="shelfDisplay"></div>
+        <div id="stealthDisplay" title="Defence"></div>
+        <div id="shelfDisplay" title="Attack"></div>
       </div>
     </div>
     <div id="middle">
